fix(toolbar): improve contrast for vertical divider

--- a/components/views/navigation/toolbar/Toolbar.less
+++ b/components/views/navigation/toolbar/Toolbar.less
@@ -64,9 +64,9 @@
     }
 
     .vertical-divider {
-      background: @splash-radial;
-      width: 2px;
-      height: 32px;
+      background: #57657433;
+      width: 1px;
+      height: 30px;
     }
   }
 }
